Loader agregado y centrado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>infinite</title>
 </head>
 <body>
+    <h1>Infinite Scroll</h1>
+    <!-- loader -->
+    <div id="loader">
+        <img src="./images/Gear-0.2s-200px.svg" alt="loader" class="loader" hidden>
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
