--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <div id="loader">
         <img src="./images/Gear-0.2s-200px.svg" alt="loader" class="loader" hidden>
     </div>
+    <!-- image-container -->
+    <div class="image-container">
+        <img src="https://images.unsplash.com/photo-1561544238-580f35f73cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=402&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1561544238-580f35f73cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=402&q=80" alt="">
+        <img src="https://images.unsplash.com/photo-1561544238-580f35f73cf0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=402&q=80" alt="">
+    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
