funcionalidad de scroll terminada

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,16 @@
     <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css">
     <title>infinite</title>
 </head>
+
 <body>
     <h1>Infinite Scroll</h1>
     <!-- loader -->
     <div id="loader">
-        <img src="./images/Gear-0.2s-200px.svg" alt="loader" class="loader" hidden>
+        <img src="./images/Gear-0.2s-200px.svg" alt="loader" class="loader">
     </div>
     <!-- image-container -->
     <div class="image-container"></div>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
